Move css out of html file and into the css file.

--- a/invert-gradle-plugin/src/main/resources/META-INF/invert.css
+++ b/invert-gradle-plugin/src/main/resources/META-INF/invert.css
@@ -29,3 +29,29 @@
     /*--bs-nav-pills-link-active-bg: #0d6efd;*/
     --bs-nav-pills-link-active-bg: rgb(13, 110, 253, 0.2) !important;
 }
+
+.my-sticky-top {
+    position: sticky;
+    top: 0;
+    z-index: 1020;
+    height: 40px;
+}
+
+.dashboard-sidebar {
+    height: 100vh; /* Full height */
+    width: 280px; /* Set the width of the sidebar */
+    position: fixed; /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1; /* Stay on top */
+    top: 40px; /* Stay at the top */
+    left: 0;
+    overflow-x: hidden; /* Disable horizontal scroll */
+    padding-top: 20px;
+}
+
+.main-content {
+    margin-left: 280px; /* Same as the width of the sidebar */
+}
+
+#main_content {
+    padding: 20px;
+}
